[package]
name = "syndica_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.204"
serde_json = "1.0.120"
serde_derive = "1.0"
axum = "0.7.5"
axum-server = "0.6.0"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"